0.12.7/_sources/reference/generated/spectrochempy.PeakFindingResult.rst
spectrochempy.PeakFindingResult
===============================

.. currentmodule:: spectrochempy

.. autoclass:: PeakFindingResult

   

   
   
   .. rubric:: Attributes Summary

   .. autosummary::
   
      ~PeakFindingResult.peaks
      ~PeakFindingResult.properties
      ~PeakFindingResult.sample_index
      ~PeakFindingResult.sample_position
      ~PeakFindingResult.sample_height
      ~PeakFindingResult.table
   
   

   
   
   .. rubric:: Methods Summary

   .. autosummary::
   
      ~PeakFindingResult.to_csv
      ~PeakFindingResult.to_dict

   
   

   
   
   .. rubric:: Attributes Documentation

   
   .. autoattribute:: peaks
   .. autoattribute:: properties
   .. autoattribute:: sample_index
   .. autoattribute:: sample_position
   .. autoattribute:: sample_height
   .. autoattribute:: table
   
   

   
   
   .. rubric:: Methods Documentation

   
   .. automethod:: to_csv
   .. automethod:: to_dict
   
   

.. rubric:: Examples using spectrochempy.PeakFindingResult
.. _sphx_glr_backref_spectrochempy.PeakFindingResult:

.. minigallery:: spectrochempy.PeakFindingResult